HomeWork TestNG Calculator tests

--- a/pom.xml
+++ b/pom.xml
@@ -1,83 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.levelp.at</groupId>
-    <artifactId>LevelUP</artifactId>
-    <version>1.0-SNAPSHOT</version>
+  <groupId>ru.levelp.at</groupId>
+  <artifactId>LevelUP</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <checkstyle.version>8.42</checkstyle.version>
+    <checkstyle.version>8.42</checkstyle.version>
 
-        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
-        <testng.version>7.5</testng.version>
-        <slf4j-nop.version>1.7.5</slf4j-nop.version>
-    </properties>
+    <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
+    <testng.version>7.5</testng.version>
+    <slf4j-nop.version>1.7.32</slf4j-nop.version>
+    <maven-surefire-plugin.version>2.12.4</maven-surefire-plugin.version>
+    <maven-compiler-plugin.version>3.9.0</maven-compiler-plugin.version>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${testng.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-nop</artifactId>
-            <version>${slf4j-nop.version}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <suite.xml.base.path>${project.basedir}/src/test/resources</suite.xml.base.path>
+    <suite.xml.file/>
+  </properties>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.9.0</version>
-                <configuration>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>${maven-checkstyle-plugin.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.puppycrawl.tools</groupId>
-                        <artifactId>checkstyle</artifactId>
-                        <version>${checkstyle.version}</version>
-                    </dependency>
-                </dependencies>
-                <configuration>
-                    <configLocation>
-                        <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
-                        https://raw.githubusercontent.com/khda91/leveup-code-checkers-configurations/main/checkstyle/checkstyle.xml
-                    </configLocation>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
-                    <consoleOutput>true</consoleOutput>
-                    <failsOnError>true</failsOnError>
-                    <linkXRef>false</linkXRef>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>validate</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+  <dependencies>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>${testng.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+      <version>${slf4j-nop.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>ru.levelp.at</groupId>
+      <artifactId>LevelUP</artifactId>
+      <version>1.0</version>
+      <scope>system</scope>
+      <systemPath>${pom.basedir}/src/main/resources/calculator-1.0.jar</systemPath>
+    </dependency>
+  </dependencies>
+
+  <profiles>
+    <profile>
+      <id>allCalculatorFunctions</id>
+      <properties>
+        <suite.xml.file>${suite.xml.base.path}/allCalcFuncSuit.xml</suite.xml.file>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>calculatorMultiplySum</id>
+      <properties>
+        <suite.xml.file>${suite.xml.base.path}/sumAndMultiplyCalcTest.xml</suite.xml.file>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>calculatorDivideSub</id>
+      <properties>
+        <suite.xml.file>${suite.xml.base.path}/subAndDivideCalcTest.xml</suite.xml.file>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>calculatorTrigonometry</id>
+      <properties>
+        <suite.xml.file>${suite.xml.base.path}/trigFuncCalc.xml</suite.xml.file>
+      </properties>
+    </profile>
+
+    <profile>
+      <id>calculatorOtherFunctions</id>
+      <properties>
+        <suite.xml.file>${suite.xml.base.path}/otherCalcFunc.xml</suite.xml.file>
+      </properties>
+    </profile>
+  </profiles>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
+        <configuration>
+          <encoding>${project.build.sourceEncoding}</encoding>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>${maven-checkstyle-plugin.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>com.puppycrawl.tools</groupId>
+            <artifactId>checkstyle</artifactId>
+            <version>${checkstyle.version}</version>
+          </dependency>
+        </dependencies>
+        <configuration>
+          <configLocation>
+            <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
+            https://raw.githubusercontent.com/khda91/leveup-code-checkers-configurations/main/checkstyle/checkstyle.xml
+          </configLocation>
+          <encoding>${project.build.sourceEncoding}</encoding>
+          <includeTestSourceDirectory>true</includeTestSourceDirectory>
+          <consoleOutput>true</consoleOutput>
+          <failsOnError>true</failsOnError>
+          <linkXRef>false</linkXRef>
+        </configuration>
+        <executions>
+          <execution>
+            <id>validate</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>${suite.xml.file}</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
